--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/jasmine": "^5.1.1",
     "eslint": "^8.52.0",
-    "jasmine": "^5.1.0"
+    "jasmine": "^5.1.0",
+    "typescript": "^5.2.2"
   }
 }
