--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Write end to end tests for your sugarcube project without firing up a browser.",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jasmine",
     "compile-typescript": "echo \"compile ts\" && tsc --build && echo \"rollup\" && rollup -c",
@@ -26,7 +27,6 @@
   },
   "homepage": "https://github.com/BawdyInkSlinger/sugarcube-e2e-test#readme",
   "devDependencies": {
-    "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
