--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.1",
   "description": "Write end to end tests for your sugarcube project without firing up a browser.",
   "main": "dist/index.js",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jasmine",
-    "compile-typescript": "echo \"compile ts\" && tsc --build && echo \"rollup\" && rollup -c",
+    "compile-typescript": "echo \"compile ts\" && tsc && cp -r src/internal/declarations dist/internal/declarations && cp src/internal/html.tpl dist/internal/html.tpl",
     "only-build": "npm run compile-typescript",
     "clean": "rm -rf tscbuild; rm -rf dist"
   },
@@ -27,9 +25,6 @@
   },
   "homepage": "https://github.com/BawdyInkSlinger/sugarcube-e2e-test#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/glob": "^8.1.0",
     "@types/jasmine": "^5.1.1",
     "@types/jquery": "^3.5.25",
@@ -39,7 +34,6 @@
     "@types/seedrandom": "^3.0.7",
     "eslint": "^8.52.0",
     "jasmine": "^5.1.0",
-    "rollup": "^4.3.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
