--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES2022",
-        "module": "ES2022",
-        "outDir": "tscbuild",
+        "module": "CommonJS",
+        "outDir": "dist",
         "declaration": true,
         "declarationMap": true,
         "importHelpers": true,
