--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "@types/jsdom": "^21.1.4",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.10",
-    "@types/seedrandom": "^3.0.7",
+    "@types/seedrandom": "^2.4.28",
     "eslint": "^8.52.0",
     "jasmine": "^5.1.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "prettier": "^3.0.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0"
   },
   "dependencies": {
     "glob": "^10.3.10",
@@ -43,6 +48,6 @@
     "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "prettier": "^3.0.3",
-    "seedrandom": "^3.0.5"
+    "seedrandom": "2.3.3"
   }
 }
