--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jasmine": "^5.1.0",
-    "prettier": "^3.0.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prettier/sync": "^0.3.0",
     "glob": "^10.3.10",
     "jquery": "^3.7.1",
     "jsdom": "^22.1.0",
