--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "htmlWhitespaceSensitivity": "css",
   "insertPragma": false,
   "singleAttributePerLine": false,
-  "bracketSameLine": false,
+  "bracketSameLine": true,
   "jsxBracketSameLine": false,
   "jsxSingleQuote": true,
   "printWidth": 80,
@@ -18,6 +18,5 @@
   "trailingComma": "es5",
   "useTabs": false,
   "embeddedLanguageFormatting": "auto",
-  "vueIndentScriptAndStyle": false,
-  "parser": "typescript"
+  "vueIndentScriptAndStyle": false
 }
