--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Write end to end tests for your sugarcube project without firing up a browser.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jasmine",
+    "test": "jasmine --config=\"spec/support/jasmine-spec.json\" && jasmine --config=\"spec/support/jasmine-e2e.json\" && npm run compile-typescript",
     "lint": "echo \"lint\" && eslint '**/*.ts' --fix",
     "compile-typescript": "echo \"compile ts\" && tsc && cp -r src/internal/declarations dist/internal/declarations && cp src/internal/html.tpl dist/internal/html.tpl",
     "only-build": "npm run compile-typescript",
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jasmine": "^5.1.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
   },
