--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,29 @@
 {
-    "compilerOptions": {
-        "target": "ES2022",
-        "module": "CommonJS",
-        "outDir": "dist",
-        "declaration": true,
-        "declarationMap": true,
-        "importHelpers": true,
-        "downlevelIteration": true,
-        "esModuleInterop": true,
-        "moduleResolution": "node",
-        "strict": true,
-        "noImplicitAny": false,
-        "strictNullChecks": false,
-        "strictFunctionTypes": false,
-        "strictBindCallApply": false,
-        "strictPropertyInitialization": false,
-        "noImplicitThis": false,
-        "alwaysStrict": false,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-        "noImplicitReturns": false,
-        "noFallthroughCasesInSwitch": false,
-        "lib": [
-            "es2022"
-        ],
-        "types": [
-            "jsdom",
-            "seedrandom",
-            "jasmine",
-        ]
-    },
-    "include": [
-        "./src/**/*.ts",
-        "./test/**/*.ts",
-    ],
-    "exclude": [],
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "CommonJS",
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true,
+    "importHelpers": true,
+    "downlevelIteration": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "strict": true,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": false,
+    "alwaysStrict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "noFallthroughCasesInSwitch": false,
+    "lib": ["es2022"],
+    "types": ["jsdom", "seedrandom", "jasmine"]
+  },
+  "include": ["./src/**/*.ts", "./test/**/*.ts"],
+  "exclude": ["./src/test-api/internal/sugarcube-testapi.reference.d.ts"]
 }
