--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/BawdyInkSlinger/sugarcube-e2e-test#readme",
   "devDependencies": {
+    "@types/diff": "^5.0.9",
     "@types/glob": "^8.1.0",
     "@types/jasmine": "^5.1.1",
     "@types/jquery": "^3.5.25",
@@ -36,6 +37,7 @@
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "diff": "^5.1.0",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -43,9 +45,10 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2"
-  },
-  "dependencies": {
+},
+"dependencies": {
     "@prettier/sync": "^0.3.0",
+    "chalk": "^4.1.2",
     "glob": "^10.3.10",
     "jquery": "^3.7.1",
     "jsdom": "^22.1.0",
