--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "jasmine --random=true --seed=78661 --config=\"spec/support/jasmine-spec.json\" && npm run compile-typescript",
     "lint": "echo \"lint\" && eslint '**/*.ts' --fix",
-    "compile-typescript": "echo \"compile ts\" && tsc && cp -r src/internal/declarations dist/src/internal/declarations && cp src/internal/html.tpl dist/src/internal/html.tpl",
+    "compile-typescript": "echo \"compile ts\" && tsc --build && cp -r src/internal/declarations dist/src/internal/declarations && cp src/internal/html.tpl dist/src/internal/html.tpl",
     "only-build": "npm run compile-typescript",
-    "clean": "rm -rf tscbuild; rm -rf dist"
+    "clean": "rm -rf dist"
   },
   "repository": {
     "type": "git",
