--- a/package.json
+++ b/package.json
@@ -26,35 +26,35 @@
   },
   "homepage": "https://github.com/BawdyInkSlinger/sugarcube-e2e-test#readme",
   "devDependencies": {
-    "@types/diff": "^5.0.9",
-    "@types/glob": "^8.1.0",
-    "@types/jasmine": "^5.1.4",
-    "@types/jquery": "^3.5.29",
-    "@types/jsdom": "^21.1.6",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.6",
-    "@types/seedrandom": "^2.4.28",
-    "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "diff": "^5.1.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "jasmine": "^5.1.0",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.6.2",
-    "@prettier/sync": "^0.3.0",
-    "typescript": "^5.3.3"
+    "@types/diff": "5.0.9",
+    "@types/glob": "8.1.0",
+    "@types/jasmine": "5.1.4",
+    "@types/jquery": "3.5.29",
+    "@types/jsdom": "21.1.6",
+    "@types/lodash": "4.14.202",
+    "@types/node": "20.10.6",
+    "@types/seedrandom": "2.4.28",
+    "@types/winston": "2.4.4",
+    "@typescript-eslint/eslint-plugin": "6.17.0",
+    "@typescript-eslint/parser": "6.17.0",
+    "diff": "5.1.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.2",
+    "jasmine": "5.1.0",
+    "ts-node": "10.9.2",
+    "tslib": "2.6.2",
+    "@prettier/sync": "0.3.0",
+    "typescript": "5.3.3"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
-    "glob": "^10.3.10",
-    "jquery": "^3.7.1",
-    "jsdom": "^23.0.1",
-    "lodash": "^4.17.21",
-    "prettier": "^3.1.1",
+    "chalk": "4.1.2",
+    "glob": "10.3.10",
+    "jquery": "3.7.1",
+    "jsdom": "23.0.1",
+    "lodash": "4.17.21",
+    "prettier": "3.1.1",
     "seedrandom": "2.3.3",
-    "winston": "^3.11.0"
+    "winston": "3.11.0"
   }
 }
