--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/BawdyInkSlinger/sugarcube-e2e-test#readme",
   "devDependencies": {
+    "@prettier/sync": "0.3.0",
     "@types/diff": "5.0.9",
     "@types/glob": "8.1.0",
     "@types/jasmine": "5.1.4",
@@ -42,9 +43,10 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.2",
     "jasmine": "5.1.0",
+    "jsdom-configurable-resource-loader": "^0.0.2",
+    "prettier": "3.1.1",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
-    "@prettier/sync": "0.3.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
@@ -53,7 +55,6 @@
     "jquery": "3.7.1",
     "jsdom": "23.0.1",
     "lodash": "4.17.21",
-    "prettier": "3.1.1",
     "seedrandom": "2.3.3",
     "winston": "3.11.0"
   }
