--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "echo \"lint\" && eslint '**/*.ts' --fix",
     "compile-typescript": "echo \"compile ts\" && tsc --build && cp -r src/internal/declarations dist/src/internal/declarations && cp src/internal/html.tpl dist/src/internal/html.tpl",
     "only-build": "npm run compile-typescript",
+    "build": "npm run compile-typescript",
     "clean": "rm -rf dist"
   },
   "repository": {
@@ -43,7 +44,6 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.2",
     "jasmine": "5.1.0",
-    "jsdom-configurable-resource-loader": "^0.0.2",
     "prettier": "3.1.1",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
@@ -52,10 +52,12 @@
   "dependencies": {
     "chalk": "4.1.2",
     "glob": "10.3.10",
-    "jquery": "3.7.1",
-    "jsdom": "23.0.1",
     "lodash": "4.17.21",
-    "seedrandom": "2.3.3",
-    "winston": "3.11.0"
+    "seedrandom": "2.3.3"
+  },
+  "peerDependencies": {
+    "jquery": "^3.7.1",
+    "jsdom": "^23.2.0",
+    "winston": "^3.11.0"
   }
 }
