--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jasmine --random=true --config=\"spec/support/jasmine-spec.json\" && npm run compile-typescript",
     "lint": "echo \"lint\" && eslint '**/*.ts' --fix",
     "compile-typescript": "echo \"compile ts\" && tsc --build --verbose && cp -r src/internal/declarations dist/src/internal/declarations && cp src/internal/html.tpl dist/src/internal/html.tpl",
-    "postcompile-typescript": "echo \"precompile ts\" && npx yalc push",
+    "postcompile-typescript": "echo \"postcompile ts\" && npx yalc push",
     "only-build": "npm run compile-typescript",
     "build": "npm run compile-typescript",
     "clean": "rm -rf dist"
