--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Write end to end tests for your sugarcube project without firing up a browser.",
   "main": "dist/src/index.js",
   "scripts": {
-    "test": "jasmine --random=true --config=\"spec/support/jasmine-spec.json\" && npm run compile-typescript",
+    "test": "NODE_OPTIONS=--stack-trace-limit=100 jasmine --random=true --config=\"spec/support/jasmine-spec.json\" && npm run compile-typescript",
     "lint": "echo \"lint\" && eslint '**/*.ts' --fix",
     "compile-typescript": "echo \"compile ts\" && tsc --build --verbose && cp -r src/internal/declarations dist/src/internal/declarations && cp src/internal/html.tpl dist/src/internal/html.tpl",
     "only-build": "npm run compile-typescript",
@@ -58,6 +58,7 @@
   "peerDependencies": {
     "jquery": "^3.7.1",
     "jsdom": "^23.2.0",
+    "console-table-printer": "latest",
     "winston": "^3.11.0"
   }
 }
