--- a/package.json
+++ b/package.json
@@ -51,11 +51,12 @@
   },
   "dependencies": {
     "chalk": "4.1.2",
+    "console-table-printer": "file:.yalc/console-table-printer",
     "glob": "10.3.10",
     "lodash": "4.17.21",
     "seedrandom": "2.3.3"
-},
-"peerDependencies": {
+  },
+  "peerDependencies": {
     "console-table-printer": "file:.yalc/console-table-printer",
     "jquery": "^3.7.1",
     "jsdom": "^23.2.0",
