--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/glob": "8.1.0",
     "@types/jasmine": "5.1.4",
     "@types/jquery": "3.5.29",
-    "@types/jsdom": "21.1.6",
+    "@types/jsdom": "^21.1.6",
     "@types/lodash": "4.14.202",
     "@types/node": "20.10.6",
     "@types/seedrandom": "2.4.28",
@@ -59,7 +59,7 @@
   "peerDependencies": {
     "console-table-printer": "file:.yalc/console-table-printer",
     "jquery": "^3.7.1",
-    "jsdom": "^23.2.0",
+    "jsdom": "^24.0.0",
     "winston": "^3.11.0"
   }
 }
