--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -5,5 +5,5 @@
     "composite": true
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["./**/*.spec.ts", "./test/**/*.ts"]
+  "exclude": ["./**/*.spec.ts", "./test/**/*.ts", "./**/sugarcube-testapi.reference.d.ts"]
 }
