--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@prettier/sync": "0.3.0",
     "@types/diff": "5.0.9",
+    "@types/format-duration": "^1.0.3",
     "@types/jasmine": "5.1.4",
     "@types/jquery": "3.5.29",
     "@types/jsdom": "^21.1.6",
@@ -51,20 +52,22 @@
   "dependencies": {
     "chalk": "4.1.2",
     "console-table-printer": "file:.yalc/console-table-printer",
+    "format-duration": "^3.0.2",
     "lodash": "4.17.21",
     "seedrandom": "2.3.3",
     "stacktrace-parser": "^0.1.10"
   },
   "peerDependencies": {
     "console-table-printer": "file:.yalc/console-table-printer",
+    "jasmine": "^5",
     "jquery": "^3.7.1",
     "jsdom": "^24.0.0",
-    "winston": "^3.12.0",
-    "jasmine": "^5"
+    "format-duration": "3",
+    "winston": "^3.12.0"
   },
   "peerDependenciesMeta": {
     "jasmine": {
-        "optional": true
+      "optional": true
     }
   }
 }
