--- a/package.json
+++ b/package.json
@@ -47,19 +47,20 @@
     "prettier": "3.1.1",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
+    "lodash": "4.17.21",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "chalk": "4.1.2",
     "console-table-printer": "file:.yalc/console-table-printer",
     "format-duration": "^3.0.2",
-    "lodash": "4.17.21",
     "seedrandom": "2.3.3",
     "stacktrace-parser": "^0.1.10"
-  },
-  "peerDependencies": {
+},
+"peerDependencies": {
     "console-table-printer": "file:.yalc/console-table-printer",
     "jasmine": "^5",
+    "lodash": "^4",
     "jquery": "^3.7.1",
     "jsdom": "^24.0.0",
     "format-duration": "3",
