--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Write end to end tests for your sugarcube project without firing up a browser.",
   "main": "dist/src/index.js",
   "scripts": {
-    "test": "NODE_OPTIONS=--stack-trace-limit=100 jasmine --random=true --config=\"spec/support/jasmine-spec.json\" && npm run compile-typescript",
+    "test": "NODE_OPTIONS='--stack-trace-limit=100' jasmine --random=true --config=\"spec/support/jasmine-spec.json\" && npm run compile-typescript",
+    "profile": "NODE_OPTIONS='--stack-trace-limit=100 --require cpupro/file/data' jasmine --random=true --config=\"spec/support/jasmine-spec.json\" && npm run compile-typescript",
     "lint": "echo \"lint\" && eslint '**/*.ts' --fix",
     "compile-typescript": "echo \"compile ts\" && tsc --build --verbose && cp -r src/internal/declarations dist/src/internal/declarations && cp src/internal/html.tpl dist/src/internal/html.tpl",
     "only-build": "npm run compile-typescript",
@@ -39,32 +40,33 @@
     "@types/winston": "2.4.4",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
+    "cpupro": "^0.5.1",
     "diff": "5.1.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.2",
     "jasmine": "5.1.0",
+    "lodash": "4.17.21",
     "prettier": "3.1.1",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
-    "lodash": "4.17.21",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "chalk": "4.1.2",
     "console-table-printer": "file:.yalc/console-table-printer",
-    "format-duration": "^3.0.2",
+    "format-duration": "3",
     "seedrandom": "2.3.3",
     "stacktrace-parser": "^0.1.10"
-},
-"peerDependencies": {
+  },
+  "peerDependencies": {
     "console-table-printer": "file:.yalc/console-table-printer",
+    "format-duration": "3",
     "jasmine": "^5",
-    "lodash": "^4",
     "jquery": "^3.7.1",
     "jsdom": "^24.0.0",
-    "format-duration": "3",
-    "winston": "^3.12.0"
+    "lodash": "^4",
+    "winston": "^3.13.0"
   },
   "peerDependenciesMeta": {
     "jasmine": {
