--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/diff": "5.0.9",
     "@types/format-duration": "^1.0.3",
-    "@types/jasmine": "5.1.4",
+    "@types/jasmine": "^5.1.4",
     "@types/jquery": "3.5.29",
     "@types/jsdom": "^21.1.6",
     "@types/lodash": "4.14.202",
@@ -52,12 +52,12 @@
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@prettier/sync": "0.5.2",
     "chalk": "4.1.2",
     "console-table-printer": "file:.yalc/console-table-printer",
     "format-duration": "3",
     "seedrandom": "2.3.3",
-    "stacktrace-parser": "^0.1.10",
-    "@prettier/sync": "0.5.2"
+    "stacktrace-parser": "^0.1.10"
   },
   "peerDependencies": {
     "console-table-printer": "file:.yalc/console-table-printer",
