--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/lodash": "4.14.202",
     "@types/node": "20.10.6",
     "@types/seedrandom": "2.4.28",
+    "@types/sinon": "^17.0.3",
     "@types/winston": "2.4.4",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
@@ -47,6 +48,7 @@
     "jasmine": "5.1.0",
     "lodash": "4.17.21",
     "prettier": "3.1.1",
+    "sinon": "^18.0.0",
     "ts-node": "10.9.2",
     "tslib": "2.6.2",
     "typescript": "5.3.3"
