Clear setup on resetState. Just like reloading the page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,7 @@
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly",
-    "State": "writable",
-    "setup": "writable"
+    "State": "writable"
   },
   "parserOptions": {
     "ecmaVersion": 2018,
